--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numpy==1.20.2
 pandas==1.2.4
 scipy==1.6.2
 scikit-learn==0.24.2
-statsmodels=0.12.2
+statsmodels==0.12.2
 
 matplotlib==3.4.1
 seaborn==0.11.1
